--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
+
+@media (min-width: 1000px) {
+  .container {
+    max-width: 1000px;
+  }
+}
+
 *{
   padding: 0;
   margin: 0;
-  font-family: Arial;
+  font-family: 'PT Sans', sans-serif;
+}
+
+body {
+	width: 100%;
+
 }
 
 a {
@@ -13,10 +28,6 @@ textarea {
 	color: white;
 }
 
-body {
-	margin: 10px auto;
-}
-
 li {
 	list-style-type: none;
 }
@@ -24,7 +35,6 @@ li {
 .container {
 	width: 980px;
 	margin: 0 auto;
-	position: relative;
 }
 
 /* begining popup-container */
@@ -72,33 +82,33 @@ li {
 
 #recall-popup {
 	position: fixed;
-	top: 30%;
-	width: 280px;
-	height: 408px;
+	top: 20%;
+	width: 350px;
+	height: 507px;
 	background-color: white;
 	padding: 30px 45px;
 }
 
 #recall-popup h1 {
 	width: 100%;
-	font-size: 20px;
+	font-size: 24px;
 	line-height: 30px;
 	text-align: center;
-	margin-top: -3px;
+	margin-bottom: 10px;
 }
 
 #recall-popup label {
 	display: block;
 	width: 100%;
-	font-size: 12px;
+	font-size: 14px;
 	line-height: 14px;
 	text-align: center;
-	padding: 15px 0px 5px 0px;
+	padding: 22px 0px 6px 0px;
 }
 
 #recall-popup input {
 	width: 100%;
-	height: 30px;
+	height: 35px;
 	border: 1px lightgrey solid;
 	border-radius: 0;
 	padding-left: 5px;
@@ -108,7 +118,8 @@ li {
 #recall-popup textarea {
 	width: 100%;
 	resize: none;
-	height: 110px;
+	height: 140px;
+	padding-left: 5px;
 }
 
 #recall-popup button {
@@ -117,7 +128,7 @@ li {
 	color: white;
 	font-weight: bold;
 	background: darkgrey;
-	padding: 7px 10px;
+	padding: 6px 20px;
 	margin: 15px auto 0px;
 	border: 1px grey solid;
 	text-transform: uppercase;
@@ -130,7 +141,9 @@ li {
 
 
 header {
-	margin-bottom: 20px;
+	padding-top: 30px;
+	padding-bottom: 60px;
+	background: #f9f9f9;
 }
 
 .top-container {
@@ -151,20 +164,19 @@ header {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	margin-left: 10px;
-	padding-top: 5px;
 }
 
 .company-name {
-	font-size: 23px;
+	font-size: 30px;
 	font-weight: bold;
 	float: left;
-	line-height: 48px;
+	line-height: 60px;
+  	font-family: 'PT Sans', sans-serif;
 }
 
 .company-info {
 	font-size: 14px;
-	line-height: 34px;
+	line-height: 50px;
 	font-weight: 600;
 }
 
@@ -176,7 +188,6 @@ header {
 
 nav > li{
 	text-decoration: none;
-	padding-top: 5px;
 }
 
 nav > li:last-child {
@@ -184,9 +195,11 @@ nav > li:last-child {
 }
 
 #top-phone {
-	font-size: 22px;
+	font-size: 40px;
 	text-decoration: none;
-	color: gray;
+	color: #1a1a1a;
+	font-family: 'Open Sans Condensed', sans-serif;
+	line-height: 1.2;
 }
 
 #top-recall {
@@ -195,10 +208,11 @@ nav > li:last-child {
 	border-bottom: 1px dashed black;
 	background: none;
 	padding: 0;
-	font: inherit;
 	cursor: pointer;
 	outline: inherit;
-	font-weight: bold;
+	font-family: 'PT Sans', sans-serif;
+	font-size: 24px;
+	font-weight: 600;
 }
 
 /* ending header */
@@ -213,13 +227,16 @@ nav > li:last-child {
 .menu ul
 {
     color: white;
+    padding: 3px 0;
 }
 
 .menu ul li
 {
     list-style-type: none;
     display: inline;
-  	font-size: 20px;
+  	font-size: 30px;
+  	font-family: 'PT Sans', sans-serif;
+  	font-weight: normal;
 }
 
 .menu li:not(:first-child):before {
@@ -227,18 +244,15 @@ nav > li:last-child {
 }
 
 .menu ul li a {
-	font-size: 1.125rem;
-	font-weight: 600;
-	text-transform: uppercase;
-	line-height: 30px;
+	line-height: 24px;
 	display: inline-block;
-	padding: 20px;
+	padding: 25px 10px;
   	text-decoration: none;
   	color: white;
 }
 
 .menu ul li a span {
-	transition: 0.3s cubic-bezier(0, 0, 0, 1);
+	transition: border 0.3s cubic-bezier(0, 0, 0, 1);
 }
 
 .menu ul li a span:hover {
@@ -254,6 +268,7 @@ nav > li:last-child {
 .catalog {
 	width: 100%;
 	display: flex;
+	margin-bottom: 195px;
 }
 
 .navigation {
@@ -269,15 +284,16 @@ nav > li:last-child {
 }
 
 .navigation ul li {
-	line-height: 30px;
+	line-height: 32px;
 	text-align: left;
+	font-size: 18px;
 }
 
 .navigation ul li a {
 	color: #595959;
 	display: block;
 	text-decoration: none;
-	font-weight: 600;
+	font-weight: normal;
 } 
 
 .navigation ul li a:hover {
@@ -330,30 +346,30 @@ nav > li:last-child {
 }
 
 .product-item {
-  width: 33%;
-  height: 360px;
-  text-align: center;
-  border-bottom: 2px solid #F5F5F5;
-  background: white;
-  font-family: "Open Sans";
-  transition: .3s ease-in;
-  margin-bottom: 10px;
-  padding-bottom: 2px;
-  margin-right: 2px;
+  	width: 30%;
+	height: 370px;
+	text-align: center;
+	border-bottom: 2px solid #F5F5F5;
+	background: white;
+	font-family: "Open Sans";
+	transition: .3s ease-in;
+	margin-bottom: 20px;
+	margin-right: 15px;
 }
 .product-item:hover {border-bottom: 2px solid #fc5a5a;}
 .product-item img {
   display: block;
   width: 100%;
+
 }
 .product-list {
   background: #fafafa;
-  padding: 15px 0;
+  padding: 23px 0;
 }
 .product-list h3 {
   font-size: 18px;
   font-weight: 400;
-  color: #444444;bottom
+  color: #444444;
   margin: 0 0 10px 0;
 }
 .price {
@@ -383,18 +399,17 @@ nav > li:last-child {
 
 .description {
 	width: 100%;
-	margin: 25px 0;
+	margin-top: 28px;
 }
 
 .description-container {
 	display: flex;
 	color: rgb(134, 134, 139);
-	font-size: 12px;
+	font-size: 14px;
 }
 
 .description-container-left {
 	width: 49%
-
 }
 
 .description-container-right {
@@ -408,10 +423,9 @@ nav > li:last-child {
 /* begining footer */
 
 footer {
-  	position: relative;
-  	width: 100%;
-  	background: #111;
+  	width: 100%;  	
   	color: #f2f2f2;
+  	background: #111;
 }
 
 .main-content {
@@ -574,3 +588,59 @@ footer {
  }
 
 /* ending footer */
+
+@media (max-width: 999px) {
+	.container {
+		max-width: 700px;
+	}
+	#top-phone {
+		font-size: 30px;
+	}
+	#top-recall {
+		font-size: 18px;
+	}
+
+	.menu ul li {
+		font-size: 20px;
+	}
+	.product-item {
+		width: 46%;
+		height: 300px;
+	}
+	.product-item img {
+		height: 185px;
+		vertical-align: middle;
+		display: inline;
+		width: auto;
+	}
+	.product-list {
+		padding: 10px 0;
+	}
+	footer {
+		font-size: 14px;
+	}
+	.center .bottomcontent .text {
+		font-size: 14px;
+	}
+	.box h2 {
+		font-size: 17px;
+	}
+}
+
+@media (max-height: 800px) {
+	#top-recall {
+		display: none;
+	}
+	#popup-container {
+		display: none !important;
+	}
+	#recall-popup {
+		display: none;
+	}
+}
+
+@media (max-width:1200px) {
+   .slideshow-container {
+       display:none;
+   }
+}
